--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -15,7 +15,7 @@
     margin-left: 30px;
     font-weight: 500;
     font-style: oblique;
-    color: white;
+    color: $text-color;
 
     .logo-sub {
       color: goldenrod;
@@ -28,7 +28,19 @@
     margin-block-end: 0;
     padding-inline-start: 0;
     display: flex;
+    align-items: center;
     list-style-type: none;
     margin-right: 20px;
+
+    a {
+      text-decoration: none;
+      padding: 10px 15px 10px 15px;
+      font-size: 20px;
+      color: $text-color;
+
+      &:hover {
+        color: $text-link;
+      }
+    }
   }
 }
