--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,10 +1,11 @@
 @import "./variables";
 @import "./navigation";
 
-body {
+html body {
   background-color: $bg-color;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 500;
   margin: 0;
+  color: $text-color;
 }
